infra/k8s/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchestrator
  namespace: default
spec:
  selector:
    app: orchestrator
  ports:
    - name: rpc
      port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
